# Jobs_Project

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  poetry.toml  pyproject.toml
src/: main.py  test.py
src/scraping/: linkedin.py
src/tools/: browser_manager.py  database_manager.py  logging_manager.py
src/utils/: orm_base.py
