[tool.poetry]
name = "jobs project"
version = "0.3.1"
description = "Python application designed to automate data scraping from multiple job posting platforms."
authors = ["Tiago Woinarski <tiagowoi@hotmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.20.0"
webdriver-manager = "^4.0.1"
sqlalchemy = "^2.0.30"
loguru = "^0.7.2"
cryptography = "^42.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
